--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,8 +1,18 @@
 /*FUENTES*/
+@font-face{
+    font-family: "nevis";
+    src: url("fuentes/nevis.eot");
+    src: url("fuentes/nevis.eot?#iefix") format("embedded-opentype"),
+        url("fuentes/nevis.woff") format("woff"),
+        url("fuentes/nevis.ttf") format("truetype"),
+        url("fuentes/nevis.svg") format("svg");
+    font-weight: normal;
+    font-style: normal;    
+}
 
 /*ESTILOS GENERALES*/
 *{
-    margin: 0;
+    margin: 0px;
     box-sizing: border-box;
 }
 body{
@@ -29,8 +39,76 @@ body{
 .header h1{
     text-align: center;
     font-size: 40px;
+    font-family: "nevis";
+    text-transform: capitalize;
+    letter-spacing: 4px;
+    margin-top: 10px;
+    text-shadow: 0px 2px 1px #333;
+    transition: all 300ms;
+}
+.header h1:hover{
+    text-shadow: 0px 2px 1px #333, 0px 0px 5px #a70b0b;
 }
 .header h1 a{
     text-decoration: none;
     color: #a70b0b; 
+}
+/*BARRA DE NAVEGACION*/
+.nav{
+    width: 100%;
+    height: 35px;
+    background-color: #613838;
+    font-family: Arial, Helvetica, sans-serif;
+    text-transform: capitalize;
+    font-size: 14px;
+    box-shadow: 0px 0px 4px #333;
+}
+.nav ul{
+    list-style: none;
+    text-decoration: none;
+    margin: 0px auto;
+    width: 1090px;
+}
+.nav > ul > li{
+    float: left;
+    line-height: 35px;
+    border-right: 1px solid gray;
+}
+.nav > ul > li a{
+    display: block;
+    padding: 0px 20px;
+    color: white;
+    text-decoration: none;
+}
+.nav > ul > li > a:first-child{
+    border-left: 1px solid gray;
+}
+.nav > ul > li:hover{
+    background-color: #a70b0b;
+}
+/*menú desplegable*/
+.nav > ul > li > ul{
+    padding: 0;
+    display: none;
+    position: absolute;
+    color: white;
+    text-align: left;
+    width: 140px;
+    box-shadow: 0px 2px 2px gray;
+    z-index: 1;
+}
+.nav > ul > li:hover > ul{
+    display: block;
+}
+.nav > ul > li:hover > ul > li{
+    background-color: #ffffff;
+    padding: 8px;
+    line-height: 25px;
+    font-size: 13px;
+}
+.nav > ul > li:hover > ul > li a{
+    color: #333;
+}
+.nav > ul > li:hover > ul > li:hover{
+    box-shadow: 0px 0px 6px black inset;
 }
